# Oxidalloc

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.cargo/: config.toml
benches/: bench.rs  speed.rs
benchmarks/: OVERVIEW.md  WARNING.md  benchmarks.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: align.rs  big_allocation.rs  calloc.rs  free.rs  global.rs  internals.rs  lib.rs  malloc.rs  thread_local.rs  trim.rs
src/abi/: align.rs  calloc.rs  fallback.rs  free.rs  malloc.rs  mod.rs  realloc.rs
src/big_allocations/: mod.rs  scheduler.rs
src/inner/: alloc.rs  calloc.rs  fallback.rs  free.rs  global_alloc.rs  memalign.rs  mod.rs  realloc.rs
src/internals/: hashmap.rs  lock.rs  mod.rs  once.rs  oncelock.rs
src/old/: align.rs  buddy.rs  free.rs  global.rs  internals.rs  lib.rs  malloc.rs  realloc.rs  thread_local.rs  trim.rs
src/slab/: bulk_allocation.rs  global.rs  interconnect.rs  mod.rs  quarantine.rs  quaratine.rs  quartine.rs  rseq_general.rs  thread_local.rs  trim.rs
src/slab/asm/: rseq_pop_x86.s  rseq_push_x86.s
src/sys/: mod.rs  numa.rs  syscall_linux.rs  syscall_unix.rs
src/trim/: gtrim.rs  mod.rs  ptrim.rs  thread.rs  trim_pthread.rs
src/va/: bitmap.rs  bootstrap.rs  mod.rs  rng.rs
tests/: abi_verification.rs  basic.rs  correctness.rs  global_alloc_verification.rs  icc_loom.rs  loom.rs  metrics.rs  stress.rs  stress_internals.rs  va_loom.rs
