[package]
name = "oxidalloc"
version = "0.2.0"
edition = "2024"

[dependencies]
rustix = { version = "1.1.3", features = ["mm"] }
libc = "0.2.180"

[dev-dependencies]
criterion = "=0.8.0"

[features]
default = []
nightly = []

[lib]
name = "oxidalloc"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"
incremental = false
codegen-units = 1
lto = "fat"
strip = "none"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"
codegen-units = 1
