[package]
name = "oxidalloc"
version = "1.0.0-public-alpha-2"
edition = "2024"

[dependencies]
rustix = { version = "1.1.3", features = [
    "thread",
    "system",
    "fs",
    "linux_latest",
] }

[dev-dependencies]
criterion = "=0.8.0"
rand = "0.10.0"
loom = "0.7"

[lib]
name = "oxidalloc"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
debug = []
global-alloc = []
hardened-linked-list = ["hardened-malloc"]
hardened-malloc = []

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"
incremental = false
codegen-units = 1
lto = "fat"
strip = "none"

[profile.release]
opt-level = 3
panic = "abort"
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.dev-opt]
inherits = "dev"
opt-level = 2
debug = true
debug-assertions = true
overflow-checks = true
panic = "abort"
codegen-units = 1
